fix: grid alignment, general spacing and size
- fix mobile nav align and dark mode icon fill
- update card margin on mobile to still appear card like
- normalize width

--- a/packages/website/pages/index.scss
+++ b/packages/website/pages/index.scss
@@ -83,8 +83,8 @@
     z-index: 0;
     left: calc(50% - #{math.div($containerWidth, 2)} - 4.5rem);
     @include medium {
-      left: calc(50% - #{math.div($containerWidth, 2)});
-      width: calc($containerWidth - 1rem);
+      left: 10px;
+      width: calc(100% - 20px);
     }
   }
 }
@@ -420,14 +420,8 @@
 
 #intro_2-statistics {
   padding: 0;
-  .card-list-block {
-    position: relative;
-    width: calc(100% + 2rem);
-    left: -1rem;
-    padding: 0.5rem;
-    border-radius: 0.375rem;
-    background-color: rgba(241, 241, 241, 0.6);
-    @include shadow1;
+  .title, .description {
+    max-width: none;
   }
   @include mini {
     .card-row {
@@ -829,7 +823,7 @@
   }
 
   .text-block {
-    margin: 2.125rem 0 0 3rem;
+    margin: 2.125rem 0 0 2rem;
     .heading {
       @include fontSize_MediumLarge;
       line-height: leading(40, 25);
