--- a/packages/website/styles/grid/gridlex-vars.scss
+++ b/packages/website/styles/grid/gridlex-vars.scss
@@ -5,7 +5,7 @@ $gl-colCount: 12 !default;
 $gl-gridName: grid !default;
 $gl-colName: col !default;
 $gl-attributeName: class !default;
-$gl-gutter: 1rem !default; // Total left + right
+$gl-gutter: 0rem !default; // Total left + right
 $gl-gutter-vertical: 1rem !default;
 $gl-mq-width: 'max-width' !default;
 
